fix: loop-5 review round 2 — CI flaky-test fix, P5/P6/P7 correctness+doc gaps
Addresses the second independent /review-client pass's residual findings on top of f705ae6:

- P1 (CI, merge-blocking): ActorRunIntegrationTest.streamedLogRedirection failed in CI on f705ae6
  (the same live race as loop 1/2 — a live-tail stream opened before the run finishes can reach EOF
  a hair before the final log bytes are flushed to that connection). Fix: after the bounded
  catch-up window, if the run produced a log but the first stream still came up empty, retry once
  with a brand-new StreamedLog opened strictly after the run is already finished — a GET against a
  static, fully-persisted log rather than a live tail, so it cannot race the run's own writer.
  Verified green 3x locally against the live API.
- P2: fixed a factually wrong RunStartSupport javadoc claim that ActorStartOptions/TaskStartOptions/
  ActorCallOptions/TaskCallOptions "stay package-private" — those classes are public (they must be,
  as public method parameter/return types); only 5 of their accessor methods are package-private.
- P5: AbstractCollectionClient.list(options) NPE'd on null options while iterate(options) tolerated
  it — now consistent. BatchAddResult.getProcessedRequests()/getUnprocessedRequests()/merge() now
  null-coalesce, matching PaginationList's existing pattern, so an explicit
  "processedRequests": null / "unprocessedRequests": null API response can no longer NPE.
- P7 (docs): documented that ValidateInputOptions lives in com.apify.client.task despite
  configuring an ActorClient method; added java.time.Instant to the standard-import list; noted
  that setStatusMessage/UserClient limits methods/ApifyClientBuilder setters throw plain JDK
  exceptions outside the ApifyClientException hierarchy; clarified waitForFinish/call's behavior
  when the wait budget expires before the run reaches a terminal state.

mvn spotless:check/compile/spotbugs:check/test all green: 183/183 tests passing, 0 fai